// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App > matches generated story visual baseline with poster layers 1`] = `
<DocumentFragment>
  <main
    class="app-shell"
    data-testid="app-shell"
  >
    <header
      class="header"
      data-testid="app-header"
    >
      <div
        class="header-brand"
      >
        <img
          alt=""
          aria-hidden="true"
          class="header-brand-icon"
          src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%20128%20128'%20role='img'%20aria-label='StoryTime'%3e%3crect%20width='128'%20height='128'%20rx='24'%20fill='%231f1d5c'/%3e%3cpath%20d='M36%2078c8-18%2020-27%2036-27%208%200%2016%203%2020%208-5-16-18-27-35-27-18%200-33%2013-36%2031-1%205-1%2010%201%2015l14%200z'%20fill='%23f6c86d'/%3e%3ccircle%20cx='88'%20cy='42'%20r='10'%20fill='%23ffe8b6'/%3e%3cpath%20d='M50%2088h32c0%206-5%2010-11%2010H61c-6%200-11-4-11-10z'%20fill='%23ffffff'/%3e%3c/svg%3e"
        />
        <h1>
          StoryTime
        </h1>
        <span
          class="tier-badge"
          data-testid="tier-badge"
        >
          Trial
        </span>
      </div>
    </header>
    <div
      class="controls-row"
    >
      <section
        aria-label="Quick Generate"
        class="quick-generate-card"
        data-testid="quick-generate-card"
      >
        <h2>
          Quick Generate
        </h2>
        <div
          class="quick-generate-main-fields"
        >
          <div
            class="form-group"
          >
            <label
              for="child-name"
            >
              Child name
            </label>
            <input
              data-testid="child-name-input"
              id="child-name"
              name="childName"
              placeholder="Child"
              type="text"
              value="Child"
            />
          </div>
          <div
            class="form-group"
          >
            <label
              for="duration"
            >
              Duration (6 min)
            </label>
            <div
              class="slider-container"
            >
              <div
                class="slider-track"
              >
                <span
                  class="slider-bound"
                >
                  5 min
                </span>
                <input
                  aria-label="Duration"
                  aria-valuetext="6 minutes"
                  data-testid="duration-slider"
                  id="duration"
                  max="15"
                  min="5"
                  step="1"
                  style="--slider-progress: 10%;"
                  type="range"
                  value="6"
                />
                <span
                  class="slider-bound"
                >
                  15 min
                </span>
              </div>
            </div>
          </div>
          <div
            class="form-group"
          >
            <label
              for="mode"
            >
              Mode
            </label>
            <select
              data-testid="mode-select"
              id="mode"
            >
              <option
                value="series"
              >
                Series
              </option>
              <option
                value="one-shot"
              >
                One-shot
              </option>
            </select>
          </div>
        </div>
        <div
          class="quick-generate-footer"
        >
          <label
            class="toggle"
          >
            <input
              aria-label="Reduced motion"
              data-testid="reduced-motion-toggle"
              type="checkbox"
            />
            Reduced motion
          </label>
          <div
            class="quick-generate-actions"
          >
            <button
              class="btn-primary"
              data-testid="generate-story-button"
              type="button"
            >
              <span
                class="btn-primary-content"
              >
                <span
                  aria-hidden="true"
                  class="btn-primary-icon sparkle"
                >
                  ✨
                </span>
                <span>
                  Generate story
                </span>
              </span>
            </button>
            <div
              class="feedback-banner feedback-banner-success quick-generate-feedback"
              data-testid="quick-generate-feedback"
              role="status"
            >
              <span
                aria-hidden="true"
                class="feedback-banner-icon"
              >
                ✨
              </span>
              <span
                class="feedback-banner-text"
              >
                Ari and the Moonlit Meadow is ready in Recent.
              </span>
            </div>
          </div>
        </div>
      </section>
      <section
        aria-label="Parent controls"
        class="parent-controls-card"
        data-testid="parent-controls-section"
      >
        <h3
          class="parent-controls-heading"
        >
          <span
            aria-hidden="true"
            class="lock-icon"
          >
            🔒
          </span>
          Parent Controls
        </h3>
        <p
          class="parent-controls-intro"
        >
          Unlock once, then manage bedtime browsing and future preferences in one calm place.
        </p>
        <div
          class="parent-controls-support parent-controls-support-ready"
        >
          <div
            class="parent-controls-support-copy"
          >
            <p
              class="parent-controls-support-title"
            >
              Verify parent with passkey
            </p>
            <p
              class="parent-controls-hint"
            >
              Use the same browser profile that created your parent passkey. StoryTime will unlock the rest of this card as soon as verification finishes.
            </p>
          </div>
        </div>
        <div
          class="parent-controls-row"
        >
          <button
            class="btn-parent-gate"
            data-testid="unlock-parent-settings-button"
            type="button"
          >
            Verify parent with passkey
          </button>
        </div>
        <p
          class="parent-controls-locked-note"
          data-testid="parent-controls-locked-note"
        >
          Verify parent identity once to edit the settings below.
        </p>
        <div
          class="parent-controls-settings"
        >
          <div
            class="parent-control-item"
          >
            <label
              class="toggle"
            >
              <input
                aria-label="Kid Shelf"
                data-testid="kid-shelf-parent-toggle"
                disabled=""
                type="checkbox"
              />
              Kid Shelf
            </label>
          </div>
          <div
            class="parent-control-item"
          >
            <label
              class="toggle"
            >
              <input
                aria-label="Notifications enabled"
                data-testid="notifications-toggle"
                disabled=""
                type="checkbox"
              />
              Notifications enabled
            </label>
            <p
              class="toggle-support-copy"
            >
              Saves a bedtime reminder preference only. Push delivery is not enabled in this build.
            </p>
          </div>
          <div
            class="parent-control-item"
          >
            <label
              class="toggle"
            >
              <input
                aria-label="Analytics enabled"
                data-testid="analytics-toggle"
                disabled=""
                type="checkbox"
              />
              Analytics enabled
            </label>
            <p
              class="toggle-support-copy"
            >
              Stores consent for future diagnostics only. No external analytics provider is enabled by default.
            </p>
          </div>
        </div>
      </section>
    </div>
    <section
      aria-label="Recent stories"
      class="shelf shelf-recent"
      data-empty="false"
      data-testid="recent-stories-shelf"
    >
      <div
        class="shelf-header"
      >
        <div
          class="shelf-header-copy"
        >
          <h3>
            Recent
          </h3>
          <p
            class="shelf-description"
          >
            Newest bedtime stories stay here so you can keep going right away.
          </p>
        </div>
        <span
          class="shelf-count"
        >
          1 saved
        </span>
      </div>
      <ul>
        <li
          class="story-card story-card-default story-card-highlighted"
          data-testid="recent-story-story-123"
          id="recent-story-story-123"
        >
          <div
            class="story-layout"
          >
            <div
              aria-label="Poster preview for Ari and the Moonlit Meadow"
              class="poster-parallax"
              role="img"
            >
              <div
                class="poster-layer"
                style="background-image: url("data:image/svg+xml;base64,PHN2Zy8+"); animation-duration: 120s; animation-delay: 0.06666666666666667s; transform: translate3d(0, 0, 1px);"
              />
              <div
                class="poster-layer"
                style="background-image: url("data:image/svg+xml;base64,PHN2Zy8+"); animation-duration: 24s; animation-delay: 0.3333333333333333s; transform: translate3d(0, 0, 4px);"
              />
              <div
                class="poster-layer"
                style="background-image: url("data:image/svg+xml;base64,PHN2Zy8+"); animation-duration: 18.46153846153846s; animation-delay: 0.43333333333333335s; transform: translate3d(0, 0, 5px);"
              />
            </div>
            <div
              class="story-summary"
            >
              <div
                class="story-header"
              >
                <div
                  class="story-meta-row"
                >
                  <span
                    class="story-audio-state"
                  >
                    Preview clip
                  </span>
                  <span
                    class="series-progress story-series-progress"
                    data-testid="recent-story-series-progress-story-123"
                  >
                    Moonlit Meadow · Episode 1
                  </span>
                </div>
                <strong
                  class="story-title"
                >
                  Ari and the Moonlit Meadow
                </strong>
                <div
                  class="story-detail-row"
                >
                  <span
                    class="story-detail-chip"
                  >
                    Series
                  </span>
                </div>
              </div>
              <p
                class="story-recap"
              >
                Previously: calm winds.
              </p>
              <div
                class="story-audio-panel"
              >
                <div
                  class="story-audio-panel-meta"
                >
                  <span
                    class="story-audio-panel-label"
                  >
                    Preview clip
                  </span>
                  <span
                    class="story-audio-duration"
                  >
                    Preview ready · about 0:36
                  </span>
                </div>
                <audio
                  aria-label="Teaser narration for Ari and the Moonlit Meadow"
                  controls=""
                  data-testid="recent-story-teaser-audio-story-123"
                  preload="metadata"
                  src="data:audio/wav;base64,AAA="
                />
                <span
                  class="story-audio-status"
                >
                  Preview ready · about 0:36
                </span>
              </div>
              <p
                class="story-feedback"
                data-testid="recent-story-approval-hint-story-123"
              >
                Verify parent identity before approving full narration.
              </p>
              <div
                class="story-actions"
              >
                <button
                  class="btn-primary story-action-primary"
                  data-testid="recent-story-approve-story-123"
                  disabled=""
                  type="button"
                >
                  Approve full narration
                </button>
                <button
                  class="btn-secondary story-action-secondary"
                  data-testid="recent-story-toggle-favorite-story-123"
                  type="button"
                >
                  Favorite
                </button>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </section>
    <section
      aria-label="Favorite stories"
      class="shelf shelf-favorites shelf-empty"
      data-empty="true"
      data-testid="favorite-stories-shelf"
    >
      <div
        class="shelf-header"
      >
        <div
          class="shelf-header-copy"
        >
          <h3>
            Favorites
          </h3>
          <p
            class="shelf-description"
          >
            Favorites stay condensed for quick replays, approvals, and calm browsing.
          </p>
        </div>
      </div>
      <div
        class="empty-state"
      >
        <span
          aria-hidden="true"
          class="empty-state-icon"
        >
          ⭐
        </span>
        <p>
          Star your favorites to find them here!
        </p>
      </div>
    </section>
  </main>
</DocumentFragment>
`;

exports[`App > matches the quick generate visual baseline 1`] = `
<DocumentFragment>
  <main
    class="app-shell"
    data-testid="app-shell"
  >
    <header
      class="header"
      data-testid="app-header"
    >
      <div
        class="header-brand"
      >
        <img
          alt=""
          aria-hidden="true"
          class="header-brand-icon"
          src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%20128%20128'%20role='img'%20aria-label='StoryTime'%3e%3crect%20width='128'%20height='128'%20rx='24'%20fill='%231f1d5c'/%3e%3cpath%20d='M36%2078c8-18%2020-27%2036-27%208%200%2016%203%2020%208-5-16-18-27-35-27-18%200-33%2013-36%2031-1%205-1%2010%201%2015l14%200z'%20fill='%23f6c86d'/%3e%3ccircle%20cx='88'%20cy='42'%20r='10'%20fill='%23ffe8b6'/%3e%3cpath%20d='M50%2088h32c0%206-5%2010-11%2010H61c-6%200-11-4-11-10z'%20fill='%23ffffff'/%3e%3c/svg%3e"
        />
        <h1>
          StoryTime
        </h1>
        <span
          class="tier-badge"
          data-testid="tier-badge"
        >
          Trial
        </span>
      </div>
    </header>
    <div
      class="controls-row"
    >
      <section
        aria-label="Quick Generate"
        class="quick-generate-card"
        data-testid="quick-generate-card"
      >
        <h2>
          Quick Generate
        </h2>
        <div
          class="quick-generate-main-fields"
        >
          <div
            class="form-group"
          >
            <label
              for="child-name"
            >
              Child name
            </label>
            <input
              data-testid="child-name-input"
              id="child-name"
              name="childName"
              placeholder="Child"
              type="text"
              value="Child"
            />
          </div>
          <div
            class="form-group"
          >
            <label
              for="duration"
            >
              Duration (6 min)
            </label>
            <div
              class="slider-container"
            >
              <div
                class="slider-track"
              >
                <span
                  class="slider-bound"
                >
                  5 min
                </span>
                <input
                  aria-label="Duration"
                  aria-valuetext="6 minutes"
                  data-testid="duration-slider"
                  id="duration"
                  max="15"
                  min="5"
                  step="1"
                  style="--slider-progress: 10%;"
                  type="range"
                  value="6"
                />
                <span
                  class="slider-bound"
                >
                  15 min
                </span>
              </div>
            </div>
          </div>
          <div
            class="form-group"
          >
            <label
              for="mode"
            >
              Mode
            </label>
            <select
              data-testid="mode-select"
              id="mode"
            >
              <option
                value="series"
              >
                Series
              </option>
              <option
                value="one-shot"
              >
                One-shot
              </option>
            </select>
          </div>
        </div>
        <div
          class="quick-generate-footer"
        >
          <label
            class="toggle"
          >
            <input
              aria-label="Reduced motion"
              data-testid="reduced-motion-toggle"
              type="checkbox"
            />
            Reduced motion
          </label>
          <div
            class="quick-generate-actions"
          >
            <button
              class="btn-primary"
              data-testid="generate-story-button"
              type="button"
            >
              <span
                class="btn-primary-content"
              >
                <span
                  aria-hidden="true"
                  class="btn-primary-icon sparkle"
                >
                  ✨
                </span>
                <span>
                  Generate story
                </span>
              </span>
            </button>
          </div>
        </div>
      </section>
      <section
        aria-label="Parent controls"
        class="parent-controls-card"
        data-testid="parent-controls-section"
      >
        <h3
          class="parent-controls-heading"
        >
          <span
            aria-hidden="true"
            class="lock-icon"
          >
            🔒
          </span>
          Parent Controls
        </h3>
        <p
          class="parent-controls-intro"
        >
          Unlock once, then manage bedtime browsing and future preferences in one calm place.
        </p>
        <div
          class="parent-controls-support parent-controls-support-ready"
        >
          <div
            class="parent-controls-support-copy"
          >
            <p
              class="parent-controls-support-title"
            >
              Verify parent with passkey
            </p>
            <p
              class="parent-controls-hint"
            >
              Use the same browser profile that created your parent passkey. StoryTime will unlock the rest of this card as soon as verification finishes.
            </p>
          </div>
        </div>
        <div
          class="parent-controls-row"
        >
          <button
            class="btn-parent-gate"
            data-testid="unlock-parent-settings-button"
            type="button"
          >
            Verify parent with passkey
          </button>
        </div>
        <p
          class="parent-controls-locked-note"
          data-testid="parent-controls-locked-note"
        >
          Verify parent identity once to edit the settings below.
        </p>
        <div
          class="parent-controls-settings"
        >
          <div
            class="parent-control-item"
          >
            <label
              class="toggle"
            >
              <input
                aria-label="Kid Shelf"
                data-testid="kid-shelf-parent-toggle"
                disabled=""
                type="checkbox"
              />
              Kid Shelf
            </label>
          </div>
          <div
            class="parent-control-item"
          >
            <label
              class="toggle"
            >
              <input
                aria-label="Notifications enabled"
                data-testid="notifications-toggle"
                disabled=""
                type="checkbox"
              />
              Notifications enabled
            </label>
            <p
              class="toggle-support-copy"
            >
              Saves a bedtime reminder preference only. Push delivery is not enabled in this build.
            </p>
          </div>
          <div
            class="parent-control-item"
          >
            <label
              class="toggle"
            >
              <input
                aria-label="Analytics enabled"
                data-testid="analytics-toggle"
                disabled=""
                type="checkbox"
              />
              Analytics enabled
            </label>
            <p
              class="toggle-support-copy"
            >
              Stores consent for future diagnostics only. No external analytics provider is enabled by default.
            </p>
          </div>
        </div>
      </section>
    </div>
    <section
      aria-label="Recent stories"
      class="shelf shelf-recent shelf-empty"
      data-empty="true"
      data-testid="recent-stories-shelf"
    >
      <div
        class="shelf-header"
      >
        <div
          class="shelf-header-copy"
        >
          <h3>
            Recent
          </h3>
          <p
            class="shelf-description"
          >
            Newest bedtime stories stay here so you can keep going right away.
          </p>
        </div>
      </div>
      <div
        class="empty-state"
      >
        <span
          aria-hidden="true"
          class="empty-state-icon"
        >
          🌙
        </span>
        <p>
          Generate your first bedtime adventure!
        </p>
      </div>
    </section>
    <section
      aria-label="Favorite stories"
      class="shelf shelf-favorites shelf-empty"
      data-empty="true"
      data-testid="favorite-stories-shelf"
    >
      <div
        class="shelf-header"
      >
        <div
          class="shelf-header-copy"
        >
          <h3>
            Favorites
          </h3>
          <p
            class="shelf-description"
          >
            Favorites stay condensed for quick replays, approvals, and calm browsing.
          </p>
        </div>
      </div>
      <div
        class="empty-state"
      >
        <span
          aria-hidden="true"
          class="empty-state-icon"
        >
          ⭐
        </span>
        <p>
          Star your favorites to find them here!
        </p>
      </div>
    </section>
  </main>
</DocumentFragment>
`;
